KubeWithIstio/nginx-deploy-v1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: testing-v1
    labels:
        version: v1
        app: myApp
spec:
    replicas: 3
    selector:
        matchLabels:
            name: testing
            app: myApp
    template:
        metadata:
            name: testing
            labels:
                name: testing
                version: v1
                app: myApp
        spec:
            containers:
            - image: httpd:2.4
              resources:
                limits:
                    cpu: 1
                    memory: 1Gi
                requests:
                    cpu: 100m
                    memory: 250Mi
              name: teste-version1
              ports:
              - containerPort: 80
