KubeWithIstio/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
    name: canaries-test
    namespace: andre-canaries
    annotations:
        service.beta.kubernetes.io/aws-load-balancer-internal: "true"
    labels:
        app: myApp
spec:
    type: LoadBalancer
    selector:
        app: myApp
    ports:
    - port: 80
      name: http
      targetPort: 80
