KubeWithIstio/nginx-destinationrules-v1.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
    name: nginx-destinationrule
spec:
    host: myApp
    subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
