KubeWithIstio/nginx-destinationrules-v2.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
    name: nginx-destionationrules
spec:
    host: myApp
    subsets:
    - name: v2
      labels:
        version: v2
